--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,8 +167,8 @@ button {
 }
 @media screen and (min-width: 768px) and (max-width: 900px) {
   .card-resto {
-    width: 40%;
-    height: 200px;
+    width: 48%;
+    height: 300px;
   }
 }
 .card-resto__new {
@@ -191,13 +191,19 @@ button {
   position: relative;
   border-radius: 20px 20px 0px 0px;
   box-sizing: border-box;
+  /* @include desktop-only {
+      height: 80%;
+  }
+  @include tablet-only {
+      height: 80%;
+  } */
 }
-@media screen and (min-width: 900px) {
+@media (min-width: ) {
   .card-resto .card-image {
     height: 80%;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 900px) {
+@media (min-width: ) {
   .card-resto .card-image {
     height: 80%;
   }
@@ -393,7 +399,22 @@ footer li {
     padding: 2rem 2rem;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 900px) {
+  .resto {
+    padding: 2rem 2rem;
+  }
+}
 @media screen and (min-width: 900px) {
+  .resto .liste_resto {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-right: 2*$layout_margin;
+    margin-left: 2*$layout_margin; */
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 900px) {
   .resto .liste_resto {
     display: flex;
     flex-flow: row wrap;
