--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,12 +198,12 @@ button {
       height: 80%;
   } */
 }
-@media (min-width: ) {
+@media screen and (min-width: 900px) {
   .card-resto .card-image {
     height: 80%;
   }
 }
-@media (min-width: ) {
+@media screen and (min-width: 768px) and (max-width: 900px) {
   .card-resto .card-image {
     height: 80%;
   }
@@ -410,8 +410,6 @@ footer li {
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    /* margin-right: 2*$layout_margin;
-    margin-left: 2*$layout_margin; */
   }
 }
 @media screen and (min-width: 768px) and (max-width: 900px) {
@@ -420,8 +418,6 @@ footer li {
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    /* margin-right: 2*$layout_margin;
-    margin-left: 2*$layout_margin; */
   }
 }
 
