--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -22,6 +22,12 @@
         margin-left: 2*$layout_margin;
         margin-right: 2*$layout_margin;
     }
+    @include media(tablet-only) {
+        display: flex;
+    text-align: center;
+        margin-left: 12*$layout_margin;
+        margin-right: 12*$layout_margin;
+    }
 
     &__ens_btns {
         display: flex;
@@ -33,6 +39,10 @@
         flex-flow: row wrap;
         justify-content: space-between;
         }
+    @include media(desktop-only) {
+        margin-left: 2*$layout_margin;
+        margin-right: 2*$layout_margin;
+    }
     }
 }
 
@@ -45,8 +55,13 @@
 
     @include media(desktop-only, tablet-only) {
         padding: 2*$layout_margin 2*$layout_margin;
+        
     }
-
+    & h2{
+        @include media(tablet-only){
+        text-align: center;
+    }
+    }
     & .liste_resto {
         @include media(desktop-only, tablet-only) {
             display: flex;
