--- a/sass/Utils/_variable.scss
+++ b/sass/Utils/_variable.scss
@@ -5,6 +5,7 @@ $colour-white: #fff;
 $colour-lightgray:#F2F2F2;
 $colour-gray:#e2e0e0;
 $colour-black : #000;
+$colour-gradient :linear-gradient($colour-secondary, $colour-primary);
 
 $layout_margin :1rem;
 /* $layout_margin : 4.4%; */
