--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -50,6 +50,7 @@
     }
 
     & .card-image img {
+        filter: brightness(1);
         filter: grayscale(0);
         min-height: 100%;
         max-width: 100%;
@@ -65,7 +66,9 @@
     }
 
     .card-image img:hover {
-        filter: grayscale(1);
+        filter: brightness(1.3);
+        /* filter: grayscale(0.2); */
+        
     }
 
     & .bloc-nom {
