ajout animation coeur

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,7 +152,7 @@ button {
   font-size: 150%;
 }
 .coeur:hover {
-  animation: gradientheart 1s;
+  animation: coeurdegrade 1s;
   animation-fill-mode: forwards;
 }
 
@@ -247,6 +247,21 @@ button {
     } */
 }
 
+@keyframes coeurdegrade {
+  0% {
+    background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+    opacity: 0.2;
+  }
+  100% {
+    background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+  }
+}
 .loader {
   border: 16px solid #f3f3f3;
   /* Light grey */
