--- a/sass/composants/_bouton.scss
+++ b/sass/composants/_bouton.scss
@@ -71,7 +71,7 @@
 	font-size:150%;
 	&:hover
 	{
-		animation: gradientheart 1s;
+		animation: coeurdegrade 1s;
 		animation-fill-mode: forwards;	
 	}
 }
