--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./composants/bouton";
 
 @import "./composants/card";
+@import "./composants/animation";
 @import "./composants/loader";
 
 @import "./layout/header";
