--- a/sass/composants/_animation.scss
+++ b/sass/composants/_animation.scss
@@ -2,18 +2,19 @@
 {
 	0%
 	{
-	background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+	background: linear-gradient(180deg, $colour-primary, $colour-secondary);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-	font-weight:bold;
-	opacity:0.2;
+	opacity:0.1;
+   
 	}
+
 	100%
 	{
-	background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+	background: linear-gradient(180deg, $colour-primary, $colour-secondary);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-	font-weight:bold;	
+    
 	}
 
 }
