ajout anim bloc

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,6 +257,14 @@ button {
     -webkit-text-fill-color: transparent;
   }
 }
+@keyframes bloc_menu {
+  0% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 #loader-container {
   position: absolute;
   background-color: #fff;
@@ -644,6 +652,7 @@ footer li {
   padding: 1rem;
   border-radius: 20px;
   margin-bottom: 1rem;
+  animation: bloc_menu 2s forwards;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .menu__description--bloc_plat h4 {
@@ -653,6 +662,15 @@ footer li {
 }
 .menu__description--bloc_plat:hover {
   box-shadow: rgba(0, 0, 0, 0.7) 5px 5px 15px;
+}
+.menu__description--bloc_plat:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.menu__description--bloc_plat:nth-child(4) {
+  animation-delay: 0.2s;
+}
+.menu__description--bloc_plat:nth-child(5) {
+  animation-delay: 0.3s;
 }
 .menu__description--bloc_plat--details {
   display: flex;
