--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,7 +259,8 @@ button {
 }
 @keyframes bloc_menu {
   0% {
-    transform: translateY(20px);
+    transform: translateY(30px);
+    opacity: 0;
   }
   100% {
     transform: translateY(0px);
@@ -663,15 +664,6 @@ footer li {
 .menu__description--bloc_plat:hover {
   box-shadow: rgba(0, 0, 0, 0.7) 5px 5px 15px;
 }
-.menu__description--bloc_plat:nth-child(2) {
-  animation-delay: 0.1s;
-}
-.menu__description--bloc_plat:nth-child(4) {
-  animation-delay: 0.2s;
-}
-.menu__description--bloc_plat:nth-child(5) {
-  animation-delay: 0.3s;
-}
 .menu__description--bloc_plat--details {
   display: flex;
   flex-direction: row;
@@ -688,6 +680,15 @@ footer li {
   margin-left: 10%;
   overflow: visible;
   text-overflow: initial;
+}
+.menu__description--bloc_plat:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.menu__description--bloc_plat:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.menu__description--bloc_plat:nth-child(4) {
+  animation-delay: 0.3s;
 }
 
 /*# sourceMappingURL=style.css.map */
