--- a/sass/composants/_animation.scss
+++ b/sass/composants/_animation.scss
@@ -18,12 +18,14 @@
 
 }
 
-@keyframes bloc_menu{
+@keyframes bloc_menu
+{
  0%{
-	 transform: translateY(20px);
+	 transform: translateY(30px);
+	 opacity: 0;
 	}
  100%{
 	transform: translateY(0px)
- }
 	
+	}	
 }
