--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -82,15 +82,7 @@
             &:hover{
             @include shadow-strong;
             }
-            &:nth-child(2) {
-                animation-delay: 0.1s;
-              }
-              &:nth-child(4) {
-                animation-delay: 0.2s;
-              }
-              &:nth-child(5) {
-                animation-delay: 0.3s;
-              }
+
             &--details {
                 display: flex;
                 flex-direction: row;
@@ -108,6 +100,15 @@
                     text-overflow: initial;
                 }
             }
+        }
+        &--bloc_plat:nth-child(2) {
+            animation-delay: 0.1s;
+          }
+        &--bloc_plat:nth-child(3) {
+            animation-delay: 0.2s;
+          }
+        &--bloc_plat:nth-child(4) {
+            animation-delay: 0.3s;
         }
     }
 }
