--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,694 +1,18 @@
-/* $layout_margin : 4.4%; */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+/* Error: Undefined mixin.
+ *     ,
+ * 123 |                     @include check-status-off;
+ *     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^
+ *     '
+ *   sass/pages/_menu.scss 123:21  @import
+ *   sass/main.scss 17:9           root stylesheet */
 
-html {
-  font-size: 100%;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined mixin.\a     \2577 \a 123 \2502                      @include check-status-off;\a     \2502                      ^^^^^^^^^^^^^^^^^^^^^^^^^\a     \2575 \a   sass/pages/_menu.scss 123:21  @import\a   sass/main.scss 17:9           root stylesheet";
 }
-
-body {
-  box-sizing: border-box;
-  background: #fff;
-}
-
-body {
-  font-family: "Roboto", "Arial", sans-serif;
-  color: #000;
-}
-
-h1 {
-  font-family: "Shrikhand", cursive;
-  font-weight: 100;
-  font-size: x-large;
-}
-
-h2 {
-  font-family: "Shrikhand", Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: large;
-  margin-bottom: 1rem;
-}
-@media screen and (min-width: 900px) {
-  h2 {
-    margin-bottom: 2rem;
-  }
-}
-
-.slogan p {
-  color: #4a4646;
-  margin-bottom: 2rem;
-}
-
-footer h2 {
-  font-family: "Shrikhand", cursive;
-  font-weight: 600;
-  font-size: large;
-  color: white;
-}
-
-footer li a {
-  font-family: "Roboto", "Arial", sans-serif;
-  font-weight: 600;
-  font-size: large;
-  color: white;
-}
-@media screen and (min-width: 900px) {
-  footer li a {
-    font-size: 95%;
-  }
-}
-
-h4 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: medium;
-}
-
-input[type=search]::placeholder {
-  color: #000;
-  font-weight: 600;
-  font-size: medium;
-}
-
-button {
-  color: #000;
-  font-weight: 550;
-  font-size: medium;
-}
-
-.btn {
-  color: #fff;
-  background: linear-gradient(#FF79DA, #9356DC);
-  width: 230px;
-  height: 50px;
-  border: none;
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.btn:hover {
-  background: linear-gradient(#fface8, #ae80e5);
-  color: #000;
-  box-shadow: rgba(0, 0, 0, 0.7) 5px 5px 15px;
-}
-
-.cursor:hover {
-  cursor: pointer;
-}
-
-.btn_fctnt {
-  width: 98%;
-  background-color: #F2F2F2;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  border-radius: 18px;
-  border: none;
-  height: 80px;
-  text-align: center;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin: 0.5rem 0;
-  left: 1rem;
-}
-@media screen and (min-width: 900px) {
-  .btn_fctnt {
-    width: 30%;
-    /* margin-right: 2*$layout_margin;
-    margin-left: 2*$layout_margin; */
-    padding-right: 2%;
-  }
-}
-.btn_fctnt__numero {
-  display: flex;
-  background: #9356DC;
-  border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  font-weight: normal;
-  margin: 0;
-  position: relative;
-  left: -1rem;
-}
-.btn_fctnt i {
-  margin-right: 1.5rem;
-}
-.btn_fctnt:hover {
-  background-color: rgba(147, 86, 220, 0.2);
-  box-shadow: rgba(0, 0, 0, 0.7) 5px 5px 15px;
-}
-.btn_fctnt:hover i {
-  color: #9356DC;
-}
-
-.coeur:hover {
-  animation: coeurdegrade 1s;
-  animation-fill-mode: forwards;
-  font-weight: bold;
-}
-
-.card-resto {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  box-shadow: 2px 2px 20px rgb(226, 223, 223);
-  border-radius: 20px;
-  height: 230px;
-  text-decoration: none;
-  position: relative;
-  box-sizing: border-box;
-  color: #333;
-  width: 100%;
-  margin-bottom: 4%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.card-resto:hover {
-  box-shadow: rgba(0, 0, 0, 0.7) 5px 5px 15px;
-}
-@media screen and (min-width: 900px) {
-  .card-resto {
-    width: 48%;
-    height: 400px;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .card-resto {
-    width: 48%;
-    height: 300px;
-  }
-}
-.card-resto__new {
-  position: absolute;
-  width: 75px;
-  padding: 0.5rem 0;
-  text-align: center;
-  right: 1rem;
-  top: 1rem;
-  background-color: #99E2D0;
-  color: #1b6150;
-  z-index: 1;
-}
-.card-resto__new h4 {
-  font-size: 80%;
-}
-.card-resto .card-image {
-  height: 70%;
-  overflow: hidden;
-  position: relative;
-  border-radius: 20px 20px 0px 0px;
-  box-sizing: border-box;
-}
-@media screen and (min-width: 900px) {
-  .card-resto .card-image {
-    height: 80%;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .card-resto .card-image {
-    height: 80%;
-  }
-}
-.card-resto .card-image img {
-  filter: brightness(1);
-  filter: grayscale(0);
-  min-height: 100%;
-  max-width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.card-resto .object-fit-norm {
-  object-fit: cover;
-}
-.card-resto .card-image img:hover {
-  filter: brightness(1.3);
-  /* filter: grayscale(0.2); */
-}
-.card-resto .bloc-nom {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 1rem;
-  /*   &:hover i {
-        color: $colour-primary;
-        background-color: rgba($colour-primary, 0.2);
-    } */
-}
-
-@keyframes coeurdegrade {
-  0% {
-    background: linear-gradient(180deg, #9356DC, #FF79DA);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    opacity: 0.1;
-  }
-  100% {
-    background: linear-gradient(180deg, #9356DC, #FF79DA);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-}
-@keyframes bloc_menu {
-  0% {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
-#loader-container {
-  position: absolute;
-  background-color: #fff;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 1s ease-in-out;
-  cursor: wait;
-  animation: fade-out 4000ms both;
-  color: #9356DC;
-  /*   & .circle{
-    border: 16px solid #f3f3f3; 
-    border-top: 16px solid #3498db; 
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-  } */
-}
-#loader-container .center {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-#loader-container .center .wave {
-  width: 5px;
-  height: 100px;
-  background: linear-gradient(45deg, #9356DC, #FF79DA);
-  margin: 10px;
-  animation: wave 0.8s linear infinite;
-  border-radius: 20px;
-}
-#loader-container .center .wave:nth-child(2) {
-  animation-delay: 0.1s;
-}
-#loader-container .center .wave:nth-child(3) {
-  animation-delay: 0.2s;
-}
-#loader-container .center .wave:nth-child(4) {
-  animation-delay: 0.3s;
-}
-#loader-container .center .wave:nth-child(5) {
-  animation-delay: 0.4s;
-}
-#loader-container .center .wave:nth-child(6) {
-  animation-delay: 0.5s;
-}
-#loader-container .center .wave:nth-child(7) {
-  animation-delay: 0.6s;
-}
-#loader-container .center .wave:nth-child(8) {
-  animation-delay: 0.7s;
-}
-#loader-container .center .wave:nth-child(9) {
-  animation-delay: 0.8s;
-}
-#loader-container .center .wave:nth-child(10) {
-  animation-delay: 0.9s;
-}
-
-@keyframes wave {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-    transform: scaleX(0);
-  }
-  50% {
-    opacity: 0;
-  }
-  70% {
-    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-  }
-  70% {
-    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-#container {
-  animation: fade-in 6000ms 200ms forwards;
-}
-
-.header {
-  background: #fff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 5rem;
-}
-.header__logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 90%;
-}
-
-.form {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: #e2e0e0;
-  box-shadow: inset 1px 4px 9px -6px;
-  height: 5rem;
-}
-.form__position {
-  border: none;
-  justify-self: baseline;
-  padding: 0 1rem;
-}
-.form__rechercher {
-  border: none;
-  justify-self: baseline;
-  background-color: #e2e0e0;
-}
-
-footer {
-  background-color: #302d2d;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 2rem 1.5rem;
-}
-@media screen and (min-width: 900px) {
-  footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  footer {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-}
-@media screen and (min-width: 900px) {
-  footer h2 {
-    width: 15%;
-    text-align: center;
-  }
-}
-@media screen and (min-width: 900px) {
-  footer nav {
-    width: 82%;
-  }
-}
-footer a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 900;
-}
-footer a i {
-  margin-right: 0.5rem;
-  width: 20px;
-  height: 20px;
-}
-footer a:hover {
-  color: #9356DC;
-}
-@media screen and (min-width: 900px) {
-  footer ul {
-    display: flex;
-    flex-direction: row;
-  }
-}
-footer li {
-  list-style-type: none;
-  margin-bottom: 0.5rem;
-  font-weight: 900;
-}
-@media screen and (min-width: 900px) {
-  footer li {
-    width: 30%;
-    text-align: end;
-  }
-}
-
-.slogan {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #F2F2F2;
-  padding: 7.5% 10%;
-  text-align: center;
-}
-.slogan h1 {
-  margin-bottom: 1rem;
-}
-
-.fctnt {
-  display: flex;
-  flex-direction: column;
-  margin: 2rem 1.2rem;
-}
-@media screen and (min-width: 900px) {
-  .fctnt {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .fctnt {
-    display: flex;
-    text-align: center;
-    margin-left: 12rem;
-    margin-right: 12rem;
-  }
-}
-.fctnt__ens_btns {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-@media screen and (min-width: 900px) {
-  .fctnt__ens_btns {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-  }
-}
-@media screen and (min-width: 900px) {
-  .fctnt__ens_btns {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-}
-
-.resto {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #F2F2F2;
-  padding: 2rem 1rem;
-}
-@media screen and (min-width: 900px) {
-  .resto {
-    padding: 2rem 2rem;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .resto {
-    padding: 2rem 2rem;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .resto h2 {
-    text-align: center;
-  }
-}
-@media screen and (min-width: 900px) {
-  .resto .liste_resto {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .resto .liste_resto {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-
-.menu {
-  /* ENTETE */
-  /*  PLATS */
-}
-.menu__entete {
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  box-sizing: border-box;
-  width: 100%;
-}
-.menu__entete img {
-  width: 100%;
-  height: 255px;
-  object-fit: cover;
-}
-.menu__entete .nom_resto {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 2rem;
-  border-radius: 45px 45px 0 0;
-  margin-top: -2rem;
-  background-color: #F2F2F2;
-}
-@media screen and (min-width: 900px) {
-  .menu .menu__description--plat {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-content: center;
-    background-color: #F2F2F2;
-    padding: 0 2rem;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .menu .menu__description--plat {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-content: center;
-    background-color: #F2F2F2;
-    padding: 0 2rem;
-  }
-}
-.menu__description {
-  padding: 2rem;
-  background-color: #F2F2F2;
-}
-@media screen and (min-width: 900px) {
-  .menu__description {
-    width: 400px;
-    padding: 2rem 0;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .menu__description {
-    width: 400px;
-    padding: 2rem 0;
-  }
-}
-.menu__description--titre {
-  margin-bottom: 3rem;
-  text-transform: uppercase;
-  padding-bottom: 0.5rem;
-  margin-bottom: 1rem;
-  position: relative;
-}
-.menu__description--titre:after {
-  content: "";
-  border-bottom: 3px solid #99E2D0;
-  width: 50px;
-  height: 10px;
-  position: absolute;
-  left: 0;
-  top: 1.5rem;
-}
-.menu__description--bloc_plat {
-  width: 100%;
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 20px;
-  margin-bottom: 1rem;
-  animation: bloc_menu 2s forwards;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.menu__description--bloc_plat h4 {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.menu__description--bloc_plat:hover {
-  box-shadow: rgba(0, 0, 0, 0.7) 5px 5px 15px;
-}
-.menu__description--bloc_plat--details {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.menu__description--bloc_plat--details p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-right: 2%;
-}
-.menu__description--bloc_plat--details h4 {
-  margin-left: 10%;
-  overflow: visible;
-  text-overflow: initial;
-}
-.menu__description--bloc_plat:nth-child(2) {
-  animation-delay: 0.1s;
-}
-.menu__description--bloc_plat:nth-child(3) {
-  animation-delay: 0.2s;
-}
-.menu__description--bloc_plat:nth-child(4) {
-  animation-delay: 0.3s;
-}
-
-/*# sourceMappingURL=style.css.map */
