--- a/sass/Utils/_mixin.scss
+++ b/sass/Utils/_mixin.scss
@@ -11,7 +11,10 @@
   white-space: nowrap;
   overflow: hidden;
 }
-
+@mixin check-status-off{
+  transform: translate(4*$layout_margin);
+  transition: transform 1000ms cubic-bezier(.32, 0, .07, 1);
+}
 @mixin media($keys...) {
   @each $key in $keys {
     @if $key==phone {
