--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -29,6 +29,7 @@
 
     /*  PLATS */
     .menu__description--plat {
+
         @include media(desktop-only, tablet-only) {
             display: flex;
             flex-flow: row wrap;
@@ -45,7 +46,7 @@
 
         @include media(desktop-only, tablet-only) {
             width: 400px;
-            padding: 2*$layout_margin 0;
+            /* padding: 2*$layout_margin 0; */
         }
 
         &--titre {
@@ -68,19 +69,39 @@
         }
 
         &--bloc_plat {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            position: relative;
+            overflow: hidden;
             width: 100%;
             background-color: $colour-white;
-            padding: $layout_margin;
+
             border-radius: 20px;
             margin-bottom: $layout_margin;
-            animation : bloc_menu 2s forwards;
+            animation: bloc_menu 2s forwards;
             @include shadow;
 
             & h4 {
-            @include textcut;
+                @include textcut;
             }
-            &:hover{
-            @include shadow-strong;
+
+            &:hover {
+                @include shadow-strong;
+
+                & .menu__description--bloc_plat--check_status {
+                    transform: translate(0);
+                }
+            }
+
+            & .info {
+                padding: 0.7*$layout_margin $layout_margin;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: stretch;
+
             }
 
             &--details {
@@ -98,15 +119,36 @@
                     margin-left: 10%;
                     overflow: visible;
                     text-overflow: initial;
+                    margin-bottom: 0px;
+                    @include check-status-off;
+                }
+            }
+
+            &--check_status {
+                position: relative;
+                background-color: $colour-tertiary;
+                color: $colour-white;
+                display: flex;
+                align-items: center;
+                border-radius: 0 20px 20px 0;
+                transform-origin: right;
+                @include check-status-off;
+
+
+                & i {
+                    padding: $layout_margin;
                 }
             }
         }
+
         &--bloc_plat:nth-child(2) {
             animation-delay: 0.1s;
-          }
+        }
+
         &--bloc_plat:nth-child(3) {
             animation-delay: 0.2s;
-          }
+        }
+
         &--bloc_plat:nth-child(4) {
             animation-delay: 0.3s;
         }
